<resources>
    <string name="app_name">WeatherExample</string>
    <string name="current_weather">Погода сейчас</string>
    <string name="daily_forecast">Недельный прогноз</string>

    <string name="c">%s°C</string>
    <string name="feels_like">Ощущается как %s °C</string>
    <string name="pressure">Давление: %s hPa</string>
    <string name="humidity">Влажность: %s %%</string>
    <string name="visibility">Видимость: %s м</string>
    <string name="wind_speed">Скорость ветра: %s м/с</string>

    <string name="add_city">Добавить город</string>
    <string name="city_name">Название города</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>

    <string name="empty_city_error">Введите город</string>

    <string name="no_connection">Нет подключения</string>

    <string name="city_exist">Введеный город уже добавлен</string>
    <string name="to_many_requests">Превышен лимит запросов</string>
    <string name="not_found">Запрошенный город не найден</string>
    <string name="common">Что-то пошло не так :(</string>

    <string name="available_char_city">АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюя -</string>
</resources>