<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    app:cardElevation="8dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imgWeather"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            app:layout_constraintBottom_toBottomOf="@id/imgWeather"
            app:layout_constraintStart_toEndOf="@id/imgWeather"
            app:layout_constraintTop_toTopOf="@id/imgWeather" />

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintStart_toEndOf="@id/tvTemperature"
            app:layout_constraintTop_toTopOf="@id/imgWeather" />

        <TextView
            android:id="@+id/tvWeatherMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/WeatherExample.TextAppearance.BodyMedium.Small"
            app:layout_constraintStart_toStartOf="@id/tvCity"
            app:layout_constraintTop_toBottomOf="@id/tvCity" />

        <TextView
            android:id="@+id/tvFeelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/WeatherExample.TextAppearance.BodyMedium.Small"
            app:layout_constraintStart_toStartOf="@id/tvWeatherMain"
            app:layout_constraintTop_toBottomOf="@id/tvWeatherMain" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/color_primary"
            app:layout_constraintTop_toBottomOf="@id/tvFeelsLike" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/separator">

            <TextView
                android:id="@+id/tvPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/pressure"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/humidity"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintStart_toStartOf="@id/tvPressure"
                app:layout_constraintTop_toBottomOf="@id/tvPressure" />

            <TextView
                android:id="@+id/tvVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/visibility"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintStart_toStartOf="@id/tvPressure"
                app:layout_constraintTop_toBottomOf="@id/tvHumidity" />

            <TextView
                android:id="@+id/tvWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/wind_speed"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvPressure"
                app:layout_constraintTop_toBottomOf="@id/tvVisibility" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imgArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsContainer"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>